# random_for_fun

./: .gitignore  CLAUDE.md  pyproject.toml  readme.md
.claude/: settings.json
app/: architecture.html  swarm-graph.html
docs/: 2026-07-03-agent-best-practices-research.md  2026-07-11-sdews-metric-extraction.md  AI供需早期預警系統 SDEWS 規格書 v1.0.docx  action-items.md  agent-swarm-charter.md  ai-market-state-map.md  category-agent-guide.md  compliance-matrix.md  dashboard.html  fix-backlog.md  rating-anchors.md  roadmap.md  sources.md  taxonomy.json  threat-model-unattended.md  web-reach.md
fixtures/: asg.chips.merchant-gpu.json  asg.models.frontier-closed.json
gpu_agent/: asof.py  assignment.py  backtest.py  bands.py  brief.py  change.py  cli.py  config.py  corpus.py  cycle.py  entities.py  gate.py  implication.py  manifest.py  memory.py  pipeline.py  price_track.py  pricefeed.py  publisher.py  reader.py  report.py  scoring.py  series.py  series_registry.py  series_store.py  shadow.py  store.py  sufficiency.py  thesis.py  web_reach_ensure.py
manifests/: chips.merchant-gpu.json  models.frontier-closed.json
registry/: acronyms.json  corroboration.json  implications.json  indicators.json  licensed-sources.json  series-indicators.json  syndicators.json  theses.chips.merchant-gpu.json  web-reach-tools.json
scripts/: build_dashboard.py  replay_v12.py  session-orient  shadow_run_v12.py  shadow_run_v14.py  web-reach-ensure  web-reach-ensure.cmd
store/: cycle-log.json  seen_docs.jsonl
tests/: test_asof.py  test_asof_seams.py  test_assignment.py  test_assignment_category.py  (+200 more)
(+428 files in other folders)
