[project]
name = "gpu_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gpu_agent*"]
